[tool.poetry]
name = "Data Science 1 Programming"
version = "0.1.0"
description = ""
authors = ["Alex <alexjol98@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
